objects/hed__Course_Enrollment__c.object
<CustomObject>
    <description>Represents a connection to a Course Offering.</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>hed__Contact__r.FirstName + &apos; &apos; + hed__Contact__r.LastName + &apos; - &apos; +  hed__Contact__r.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Enrollment_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Course_Enrollment_External_ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>hed__Course_Offering__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Academic Program the student is enrolled in.</description>
        <inlineHelpText>The Academic Program the student is enrolled in.</inlineHelpText>
        <label>Contact&apos;s Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliation</label>
        <referenceTo>hed__Affiliation__c</referenceTo>
        <relationshipLabel>Course Connection</relationshipLabel>
        <relationshipName>Course_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student taking the course.</description>
        <inlineHelpText>The student taking the course.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Student_Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Course Offering the student is enrolled in. It&apos;s a Course offered at a specific Term.</description>
        <inlineHelpText>The Course Offering the student is enrolled in. It&apos;s a Course offered at a specific Term.</inlineHelpText>
        <label>Course Offering ID</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Course Connection</relationshipLabel>
        <relationshipName>Course_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Attempted__c</fullName>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Grade__c</fullName>
        <label>Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents a Primary Course Connection.</description>
        <inlineHelpText>Represents a Primary Course Connection.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Program Enrollment record number for the Program the student is enrolled in. Links a student with an Academic Program.</description>
        <inlineHelpText>The Program the student is enrolled in. Links a student with an Academic Program.</inlineHelpText>
        <label>Program Enrollment ID</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Course Connections</relationshipLabel>
        <relationshipName>Course_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>Represents the Status of the Course Connection.</description>
        <inlineHelpText>Represents the Status of the Course Connection.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course Connection</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Course Connection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Connections</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>A Default Record Type for use in testing. This Record Type should only be enabled and visible for System Administrators.</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Faculty</fullName>
        <active>true</active>
        <description>A Faculty Course Connection</description>
        <label>Faculty</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>A Student Course Connection</description>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>